this scope and closure, minor spacing fix in ui

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@ body{
     justify-content: center;
 }
 h1{
+    margin-top:30px;
+    font-size: 3.2rem;
    color:green;
-   max-width: 130px;
+   max-width: 200px;
 }
